# tagged-base64

./: .dockerignore  .gitignore  .gitlab-ci.yml  CNAME  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  crates.js  flake.nix  help.html  index.html  run-js-test.sh  search-index.js  settings.html  src-files.js  wasm-server.py
.github/workflows/: build.yml  coverage.yml
espresso-systems-constants/: Cargo.toml
espresso-systems-constants/src/: lib.rs
js/: app.js  package.json
js-test/: index.html
macros/: Cargo.toml
macros/src/: lib.rs
search.desc/tagged_base64/: tagged_base64-desc-0-.js
search.desc/tagged_base64_macros/: tagged_base64_macros-desc-0-.js
src/: lib.rs  main.rs  tagged_base64.rs
src/tagged_base64/: lib.rs.html
src/tagged_base64_macros/: lib.rs.html
tagged-base64/: Cargo.toml
tagged-base64-macros/: Cargo.toml
tagged-base64-macros/src/: lib.rs
tagged-base64/src/: lib.rs  main.rs
tagged-base64/tests/: tests.rs
tagged_base64/: all.html  attr.tagged.html  constant.BASE64.html  constant.TB64_DELIM.html  enum.Tb64Error.html  fn.to_string.html  index.html  sidebar-items.js  struct.JsTaggedBase64.html  struct.TaggedBase64.html  trait.Tagged.html
tagged_base64_macros/: all.html  attr.tagged.html  index.html  sidebar-items.js
tests/: tests.rs
trait.impl/ark_serialize/: trait.CanonicalDeserialize.js  trait.CanonicalSerialize.js  trait.Valid.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.AsRef.js  trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/snafu/: trait.ErrorCompat.js
