[workspace.package]
version = "0.4.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "MIT"

[workspace]
resolver = "2"
members = [
  "tagged-base64",
  "tagged-base64-macros",
]

[workspace.dependencies]
ark-bls12-381 = "0.4"
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
rand_chacha = "0.3"
serde = "1.0"
snafu = "0.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
