[package]
name = "tagged-base64-macros"
description = "Procedural macros associated with tagged-base64"
version = "0.3.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[lib]
proc-macro = true

[features]
default = ["serde"]
serde = []

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
