[package]
name = "tagged-base64-macros"
description = "Procedural macros associated with tagged-base64"
version = "0.3.3"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
repository = "https://github.com/EspressoSystems/tagged-base64"
license = "MIT"

[lib]
proc-macro = true

[features]
default = ["serde"]
serde = []

[dependencies]
syn = { version = "1.0.109", features = ["full", "extra-traits"] }
quote = "1.0"
