[package]
name = "tagged-base64-macros"
description = "Procedural macros associated with tagged-base64"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[features]
default = ["serde"]
serde = []

[dependencies]
syn = { version = "2.0.53", features = ["full", "extra-traits"] }
quote = "1.0"
